# python-rest-api-server-101

./: .gitignore  README.md
project/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt
project/src/: api.py  config.py  database.py  main.py  model.py
project/src/api/: __init__.py  common.py
project/src/api/auth/: __init__.py  signin.py  signup.py  utils.py
project/src/api/comments/: __init__.py  create_comment.py  delete_comment.py  read_comment.py  read_comments.py  update_comment.py
project/src/api/feedbacks/: __init__.py
project/src/api/feedbacks/comments/: __init__.py  create_or_update_comment_feedback.py  (+2 more)
project/src/api/posts/: __init__.py  create_post.py  delete_post.py  patch_post.py  read_post.py  read_posts.py  update_post.py
project/src/api/users/: __init__.py  get_me.py  read_users.py
project/src/api/v1/: __init__.py
project/src/models/: comment.py  post.py  user.py  utils.py
project/src/models/feedbacks/: comment_feedback.py  post_feedback.py
project/tests/: conftest.py
project/tests/api/: conftest.py  test_healthcheck.py
project/tests/api/comments/: test_create_comment.py  test_delete_comment.py  test_read_comment.py  test_read_comments.py  test_update_comment.py
project/tests/api/posts/: test_create_post.py  test_delete_post.py  test_patch_post.py  test_read_post.py  test_read_posts.py  test_update_post.py
project/tests/api/users/: conftest.py  test_get_me.py  test_read_users.py
project/tests/api/v1/: conftest.py  test_healthcheck.py
(+81 files in other folders)
