[tool.pycln]
all = true

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--numprocesses=auto",
    "--cov-report=term-missing",
    "--cov=src",
    "--no-cov-on-fail"
]

[tool.poetry]
name = "python-rest-api"
version = "0.1.0"
description = ""
authors = ["heumsi <heumsi@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {version = "0.75.1", extras = ["all"]}
sqlmodel = "0.0.6"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
python-jose = {version = "3.3.0", extras = ["cryptography"]}
python-dotenv = "0.20.0"
SQLAlchemy = "1.4.34"
pyhumps = "3.7.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"
pycln = "1.3.3"
black = "22.3.0"
isort = "5.10.1"
mypy = "0.961"
pre-commit = "2.19.0"
pytest-xdist = "2.5.0"
commitizen = "2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
